conformance/tests/gateway-update-listener-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-update-listener-hostname
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "other.example.com"
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-update-listener-hostname
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - kind: Gateway
    name: gateway-update-listener-hostname
    namespace: gateway-conformance-infra
  hostnames:
  - "accepted.example.com"
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
